# django-learn

./: .gitignore  .pre-commit-config.yaml  _todo.txt  db.sqlite3  manage.py  pyproject.toml
apps/: urls.py
apps/catalog/: admin.py  models.py  serializers.py  services.py  utils.py  views.py
apps/catalog/migrations/: 0001_initial.py  0002_rename_category_id_tag_category_and_more.py  0003_product_is_limited.py  0004_alter_banner_options_alter_catalog_options_and_more.py  0005_remove_image_src_alter_banner_product_and_more.py  0006_image_src.py  0007_alter_product_price.py  0008_alter_sales_date_from_alter_sales_date_to.py  0009_remove_product_count_product_count_product.py
apps/core/: admin.py  models.py
apps/core/migrations/: 0001_initial.py  0002_alter_globalsettings_options.py
apps/profile/: admin.py  models.py  serializers.py  services.py  utils.py  views.py
apps/profile/migrations/: 0001_initial.py  0002_alter_profile_avatar_alter_profile_email_and_more.py  0003_remove_order_payment_remove_payment_user_and_more.py  0004_alter_basket_options_alter_order_options_and_more.py  0005_alter_profile_avatar.py  0006_alter_profile_avatar.py  0007_alter_basket_user.py  0008_remove_basket_count_remove_basket_total_price.py  0009_basketproduct_count.py  0010_rename_count_basketproduct_count_product.py  0011_alter_order_delivery_type_alter_order_payment_type_and_more.py  0012_remove_order_profile_order_user.py  0013_orderproduct_count_product.py  0015_alter_order_payment_type.py  (+1 more)
diploma/: asgi.py  settings.py  urls.py  wsgi.py
swagger/: swagger.yaml
(+29 files in other folders)
